# MultinomialGridMixture

./: CMakeLists.txt  MCMC.bf  MCMC_PROC.bf  THRESHOLD.bf  rate_generator.bf  sim.bf
data/: BB_full.txt  rates.txt  test.txt
src/: ComputeMultinomialGridScores.cpp
